build for mainline Elasticsearch 6.3.2